--- a/home.css
+++ b/home.css
@@ -63,7 +63,7 @@
     font-size: 18px;
     height:100vh;
     overflow: none;
-    background: black;
+    background: #2a2a2a;
   }
   input {
     font-size: 1.1em;
