--- a/room2.css
+++ b/room2.css
@@ -29,20 +29,36 @@ body, html {
     100%{background-position:0px 0px}
 }
 
+body {
+    min-height: 100vh;
+    height: auto;
+}
+
 .light {
     background: transparent;
     width: 100%;
+}
+
+::-webkit-scrollbar { 
+    display: none; 
 }
 
 #middle {
     border-radius: 0px;
     margin: auto;
     opacity: .8;
-    height: 100%;
+    height: 100vh;
+    overflow: scroll;
     width: 900px;
     background-image: url("static.png");
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
     background-position: center;
+}
+
+#middle p {
+    margin-bottom: 10px;
+    text-align: left;
+    text-indent: 30px;
 }
